--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "backend",
   "version": "1.0.0",
+  "type": "module",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -10,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "^6.16.0",
+    "@supabase/supabase-js": "^2.57.4",
     "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
     "dotenv": "^17.2.2",
@@ -23,14 +25,5 @@
   "devDependencies": {
     "nodemon": "^3.1.10",
     "prisma": "^6.16.0"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/ghost99177862/Rishu.git"
-  },
-  "bugs": {
-    "url": "https://github.com/ghost99177862/Rishu/issues"
-  },
-  "homepage": "https://github.com/ghost99177862/Rishu#readme",
-  "description": ""
+  }
 }
